# Android-NDK-with-Google-Test

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/sozeri/gtest8/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: foo.cpp  foo.h  foo_unittest.cc  native-lib.cpp
app/src/main/java/com/example/sozeri/gtest8/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/sozeri/gtest8/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
